feat: add support for Minecraft versions 1.21.9 and 1.21.10